# QuorumProof

./: Cargo.toml
.kiro/specs/member-offboarding/: .config.kiro  design.md  requirements.md  tasks.md
benches/tests/: benchmarks.rs
contracts/integration_tests/: Cargo.toml
contracts/integration_tests/src/: lib.rs
contracts/quorum_proof/: Cargo.toml  fuzz_tests.rs
contracts/quorum_proof/src/: lib.rs
contracts/quorum_proof/test_snapshots/tests/: test_add_attestor_duplicate_panics.1.json  test_different_issuers_produce_distinct_provenance.1.json  test_get_attestation_count.1.json  test_get_credential_panics_when_expired.1.json  test_get_credentials_by_subject_multiple.1.json  test_pause_blocks_attest.1.json  test_pause_blocks_issue_credential.1.json  test_pause_blocks_revoke_credential.1.json  test_subject_revoke_credential.1.json  test_unpause_allows_issue_credential.1.json  (+1 more)
contracts/sbt_registry/src/: lib.rs
contracts/zk_verifier/src/: lib.rs
docs/: credential-types.md  security-audit-checklist.md  threat-model.md
docs/adr/: 0000-adr-template.md  0001-fba-trust-model.md  0002-soulbound-tokens.md  0003-zk-verification.md
frontend/src/: stellar.ts  styles.css
frontend/src/__tests__/: ImportCredentials.test.tsx
frontend/src/components/: ImportCredentialsDialog.tsx  index.ts
frontend/src/lib/: importUtils.ts
frontend/src/pages/: CredentialDetail.tsx  Dashboard.tsx  Feedback.tsx  Verify.tsx
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_quorum_proof.rs  fuzz_sbt_registry.rs  fuzz_zk_verifier.rs
scripts/: test.sh
(+58 files in other folders)
